11712702-project2/test/test_11712702_6.out
Error type 10 at Line 16: apply indexing operator to non-array variable
Error type 8 at Line 16: incompatiable return type
