11712702-project2/test/test_11712702_6.spl
struct Apple
{
  int weight;
  float round;
};
struct Banana{
  int weight1;
  float round1;
};
int test_11712702_1()
{
  struct Apple aa;
  struct Banana bb;
  float weight_test = 1.0;

  return aa[0];
}
